--- a/settings.yml
+++ b/settings.yml
@@ -1,4 +1,4 @@
 Host: charliepoole.org
 SiteTitle: CharliePoole.org
 LinkHideExtensions: false
-PostSources: "{posts,family*}/*"
+PostSources: "{technical,family-photos,family-history}/*"
