--- a/settings.yml
+++ b/settings.yml
@@ -1,5 +1,5 @@
 Host: charliepoole.org
 SiteTitle: CharliePoole.org
 LinkHideExtensions: false
-PostSources: "{technical,family-photos,family-history}/*"
+PostSources: "{technical,personal}/*"
 LastUpdate: => { if (Document.ContainsKey("Updated")) return Document.GetDateTime("Updated"); return Document.GetDateTime("Published"); };
