Hide non-technical posts making this site tech-only; create new directory for ported articles

--- a/settings.yml
+++ b/settings.yml
@@ -1,5 +1,5 @@
 Host: charliepoole.org
 SiteTitle: CharliePoole.org
 LinkHideExtensions: false
-PostSources: "{technical,personal}/*"
+PostSources: "{articles,technical}/*"
 LastUpdate: => { if (Document.ContainsKey("Updated")) return Document.GetDateTime("Updated"); return Document.GetDateTime("Published"); };
